--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="memdc.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MyScrollView.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CZoomView.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test.cpp">
@@ -99,6 +105,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="PreviewDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MyScrollView.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CZoomView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
