EPRE)  일단 Tree, List 컨트롤은 붙인것 같음. 사이즈 조절시 변화할 수 있도록 해야함.. 비트맵 출력도 고쳐야함..

--- a/EPRE/EPRE/EPRE.rc
+++ b/EPRE/EPRE/EPRE.rc
@@ -165,12 +165,14 @@ IDD_FORM_FOLDER DIALOGEX 0, 0, 309, 178
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    CONTROL         "",IDC_FOLDERS_TREE,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | WS_BORDER | WS_HSCROLL | WS_TABSTOP,7,7,117,164
 END
 
-IDD_FORM_LIST DIALOGEX 0, 0, 309, 177
+IDD_FORM_LIST DIALOGEX 0, 0, 167, 177
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    CONTROL         "",IDC_LIST_REM,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,127,163
 END
 
 IDD_FORM_BMP DIALOGEX 0, 0, 309, 177
@@ -246,7 +248,7 @@ BEGIN
     IDD_FORM_LIST, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 160
         TOPMARGIN, 7
         BOTTOMMARGIN, 170
     END
