--- a/EPRE/EPRE/EPRE.vcxproj.filters
+++ b/EPRE/EPRE/EPRE.vcxproj.filters
@@ -42,10 +42,25 @@
     <ClInclude Include="BMPZoomView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="FormFolder.h">
+    <ClInclude Include="MFCShellTreeCtrlEx.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="FormList.h">
+    <ClInclude Include="MFCShellUtils.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MFCShellListCtrlEx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FormListDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FormFolderDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ProjFilesArray.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ProjectListCtrl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -68,10 +83,25 @@
     <ClCompile Include="BMPZoomView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="FormFolder.cpp">
+    <ClCompile Include="MFCShellTreeCtrlEx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="FormList.cpp">
+    <ClCompile Include="MFCShellUtils.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MFCShellListCtrlEx.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FormListDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FormFolderDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ProjFilesArray.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ProjectListCtrl.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
