--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClInclude Include="memdc.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CZoomView.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="MFCShellListCtrlEx.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -67,6 +64,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="MyScrollView.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CZoomView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
