--- a/EPRE/EPRE/EPRE.rc
+++ b/EPRE/EPRE/EPRE.rc
@@ -179,6 +179,7 @@ IDD_FORM_BMP DIALOGEX 0, 0, 309, 177
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    CONTROL         "",IDC_BMP_THUMNAIL,"Static",SS_BLACKFRAME,7,26,70,68
 END
 
 
