Test 프로젝트에서 eidt에 입력시 주소 자동으로 인덱스에 맞춰서 저장할 수 있도록 만들예정

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BMPclass.h" />
+    <ClInclude Include="EditDlg.h" />
     <ClInclude Include="FileOpenClass.h" />
     <ClInclude Include="memdc.h" />
     <ClInclude Include="MFCShellListCtrlEx.h" />
@@ -126,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BMPclass.cpp" />
+    <ClCompile Include="EditDlg.cpp" />
     <ClCompile Include="FileOpenClass.cpp" />
     <ClCompile Include="MFCShellListCtrlEx.cpp" />
     <ClCompile Include="MFCShellTreeCtrlEx.cpp" />
