--- a/EPRE/EPRE/EPRE.vcxproj.filters
+++ b/EPRE/EPRE/EPRE.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="memdc.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SetFileNameDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EPRE.cpp">
@@ -105,6 +108,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ProjectListCtrl.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SetFileNameDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
