--- a/EPRE/EPRE/EPRE.vcxproj
+++ b/EPRE/EPRE/EPRE.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="ProjFilesArray.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SetFileNameDlg.h" />
+    <ClInclude Include="SetImagePathDlg.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="ZoomView.h" />
@@ -133,6 +134,7 @@
     <ClCompile Include="ProjectListCtrl.cpp" />
     <ClCompile Include="ProjFilesArray.cpp" />
     <ClCompile Include="SetFileNameDlg.cpp" />
+    <ClCompile Include="SetImagePathDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
