--- a/EPRE/EPRE/EPRE.vcxproj.filters
+++ b/EPRE/EPRE/EPRE.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClInclude Include="SetImagePathDlg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SetResultPathDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MyBMPclass.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EPRE.cpp">
@@ -117,6 +123,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="SetImagePathDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SetResultPathDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MyBMPclass.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
