--- a/EPRE/EPRE/EPRE.rc
+++ b/EPRE/EPRE/EPRE.rc
@@ -178,7 +178,7 @@ BEGIN
 END
 
 IDD_SAVE__IMAGE_DLG DIALOGEX 0, 0, 255, 74
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_ABSALIGN | DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "파일 이름 저장하기"
 FONT 9, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
