자를 영역 리사이징, 무빙 시 핫키(Ctrl + S)를 통해 저장 가능

--- a/EPRE/EPRE/EPRE.rc
+++ b/EPRE/EPRE/EPRE.rc
@@ -137,6 +137,7 @@ BEGIN
     VK_F6,          ID_PREV_PANE,           VIRTKEY, SHIFT, NOINVERT
     VK_ADD,         ID_VIEW_ZOOMIN,         VIRTKEY, NOINVERT
     VK_SUBTRACT,    ID_VIEW_ZOOMOUT,        VIRTKEY, NOINVERT
+    "S",            ID_SAVE_KEY,            VIRTKEY, CONTROL, NOINVERT
 END
 
 
